<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lytContenedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
            tools:ignore="LabelFor"
            >


            <TextView
                android:id="@+id/lblPrincipal"
                android:layout_width="146dp"
                android:layout_height="55dp"
                android:layout_marginStart="135dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="136dp"
                android:layout_marginBottom="27dp"
                android:fontFamily="@font/alfa_slab_one"
                android:text="@string/principal"
                android:textAlignment="center"
                android:textStyle="italic"
                app:barrierAllowsGoneWidgets="false"
                app:layout_constraintBottom_toTopOf="@+id/lblNombre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/txtEdad"
                android:layout_width="299dp"
                android:layout_height="48dp"
                android:layout_marginStart="43dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="69dp"
                android:autofillHints="Edad"
                android:inputType="number"
                app:barrierAllowsGoneWidgets="false"
                app:layout_constraintBottom_toTopOf="@+id/lblCapacidadMochila"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Edad"
                tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/lblCapacidadMochila"
                android:layout_width="285dp"
                android:layout_height="45dp"
                android:layout_marginStart="43dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="83dp"
                android:fontFamily="monospace"
                android:text="@string/_03"
                app:barrierAllowsGoneWidgets="false"
                app:layout_constraintBottom_toTopOf="@+id/txtMochila"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEdad"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/txtMochila"
                android:layout_width="299dp"
                android:layout_height="48dp"
                android:layout_marginStart="43dp"
                android:layout_marginEnd="69dp"
                android:layout_marginBottom="29dp"
                android:autofillHints="mochila"
                android:inputType="number"
                app:barrierAllowsGoneWidgets="false"
                app:layout_constraintBottom_toTopOf="@+id/aceptar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblCapacidadMochila"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/Edad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginEnd="133dp"
                android:fontFamily="monospace"
                android:text="@string/_04"
                app:barrierAllowsGoneWidgets="false"
                app:layout_constraintBottom_toTopOf="@+id/txtEdad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/esENANO"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/Raza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="43dp"
                android:layout_marginEnd="133dp"
                android:layout_marginBottom="7dp"
                android:fontFamily="monospace"
                android:text="@string/_05"
                app:barrierAllowsGoneWidgets="false"
                app:layout_constraintBottom_toTopOf="@+id/esHUMANO"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cmbOpciones"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/Clase"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="125dp"
                android:fontFamily="monospace"
                android:text="@string/_06"
                app:barrierAllowsGoneWidgets="false"
                app:layout_constraintBottom_toTopOf="@+id/cmbOpciones"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNombre"
                tools:ignore="MissingConstraints" />


            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="299dp"
                android:layout_height="48dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="69dp"
                android:layout_marginBottom="13dp"
                android:autofillHints="name"
                android:inputType="text"
                app:barrierAllowsGoneWidgets="false"
                app:layout_constraintBottom_toTopOf="@+id/Clase"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblNombre"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/lblNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="45dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="117dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="monospace"
                android:text="@string/_01"
                android:textAlignment="viewStart"
                app:barrierAllowsGoneWidgets="false"
                app:layout_constraintBottom_toTopOf="@+id/txtNombre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblPrincipal" />


            <Spinner
                android:id="@+id/cmbOpciones"
                android:layout_width="299dp"
                android:layout_height="50dp"
                android:layout_marginStart="43dp"
                android:layout_marginEnd="69dp"
                android:layout_marginBottom="25dp"
                app:layout_constraintBottom_toTopOf="@+id/Raza"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Clase" />

            <Button
                android:id="@+id/esELFO"
                android:layout_width="84dp"
                android:layout_height="42dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="27dp"
                android:text="Elfo"
                app:layout_constraintBottom_toTopOf="@+id/Edad"
                app:layout_constraintEnd_toStartOf="@+id/esENANO"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/esGOBLIN" />

            <Button
                android:id="@+id/esHUMANO"
                android:layout_width="106dp"
                android:layout_height="37dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="133dp"
                android:layout_marginBottom="10dp"
                android:text="Humano"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/esENANO"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/esGOBLIN"
                app:layout_constraintTop_toBottomOf="@+id/Raza" />

            <Button
                android:id="@+id/esENANO"
                android:layout_width="95dp"
                android:layout_height="35dp"
                android:layout_marginEnd="133dp"
                android:layout_marginBottom="27dp"
                android:text="Enano"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/Edad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/esELFO"
                app:layout_constraintTop_toBottomOf="@+id/esHUMANO" />

            <Button
                android:id="@+id/esGOBLIN"
                android:layout_width="100dp"
                android:layout_height="39dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="10dp"
                android:text="Goblin"
                app:layout_constraintBottom_toTopOf="@+id/esELFO"
                app:layout_constraintEnd_toStartOf="@+id/esHUMANO"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Raza" />


            <Button
                android:id="@+id/aceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="109dp"
                android:layout_marginTop="29dp"
                android:layout_marginEnd="125dp"
                android:text="@string/aceptar"
                app:barrierAllowsGoneWidgets="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtMochila"
                tools:ignore="MissingConstraints" />



        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>